Fix flexbox in container to remove gaps at very large resolutions (closes #35)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,17 +24,30 @@ div {
   display: flex;
   -webkit-flex-flow: wrap;
   -ms-flex-flow: wrap;
-  flex-flow: wrap; }
+  flex-flow: wrap;
+  -webkit-align-content: flex-start;
+  -ms-flex-line-pack: start;
+  align-content: flex-start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
   #container header,
   #container footer,
   #container main,
   #container nav {
-    -webkit-flex: 1 1 100%;
-    -ms-flex: 1 1 100%;
-    flex: 1 1 100%;
+    -webkit-flex: 1 0 100%;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%;
     z-index: 10; }
   #container header {
     z-index: 11; }
+  #container footer {
+    -webkit-flex: 0 1 100%;
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%; }
 
 header {
   text-align: center;
