--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -3,17 +3,23 @@
   margin: 0 auto;
   display: flex;
   flex-flow: wrap;
+  align-content: flex-start;
+  align-items: flex-start;
+  justify-content: flex-start;
 
   header,
   footer,
   main,
   nav {
-    flex: 1 1 100%;
+    flex: 1 0 100%;
     z-index: 10;
   }
 
   header {
     z-index: 11;
+  }
+  footer {
+    flex: 0 1 100%;
   }
 }
 
